# pyrmind

./: .gitignore  README.md  pyproject.toml
pyrmind/: __init__.py  __main__.py  attach.py  env.py  process_manager.py  procfile.py  socket_server.py  tmux_client.py
use_case/: README.md  split_and_run.py
use_case/sample_data/: orders.csv
